--- a/styles/estatus_envio.css
+++ b/styles/estatus_envio.css
@@ -1,6 +1,5 @@
 /* Fuentes */
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@900&family=Sanchez:ital@1&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Lustria&family=Tsukimi+Rounded:wght@500&display=swap" );
 
 :root {
     --color1: #FAE8F5;
@@ -12,39 +11,29 @@
     --fuente-2: 'Sanchez', serif; 
 }
 
+/* ------ Imagen de fondo y su formato ------ */
 body{
-    
     background-image: url('/assets/imgs/Fondos/gradiente_magico2.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    
 }
 
-/*
-.TITULO {
-    margin-top: 80px;
-    font-family: var(--fuente-1);
-    background-color: #fae8f59f;
-    text-align: center;
-}
-*/
-
+/* ---------- Tipografias ------------- */
 #h2Titulo{
     font-family: var(--fuente-2);
     color: var(--color5);
-    
 }
 
 
 #subtitulo{
-    
     font-family: var(--fuente-2);
 }
 
+
+/* ---------- Diseño de tarjetas ------------- */
 .card3{
-    
     background-color: var(--color1);
     margin: 10px;
     color: #000000;
@@ -59,16 +48,12 @@ body{
     margin-bottom: 40px;
     padding: 0px;
     background-color: #ffffff7e !important;
-    
-    
 }
 
 #seccion{
-    
     padding: 50px;
     border-radius: 10px;
     font-family: var(--fuente-2);
-
 }
 
 /* Estilos para la sección de estatus de envío de productos */
