--- a/styles/lista_direcciones_usuario.css
+++ b/styles/lista_direcciones_usuario.css
@@ -4,13 +4,11 @@
 root{
   --fuente-1: 'League Spartan', sans-serif;
   --fuente-2: 'Sanchez', serif; 
-  /* 'Sanchez', serif;  */
 }
 
-
+/* ----- Fondo y formato pagina --------- */
 .body{
 background-color: #FAE8F5 !important;
-/* font-family: 'Lustria', serif;   */
 font-family: var(--fuente-2);
 background-image: url('/assets/imgs/Fondos/gradiente_magico2.png');
 background-size: cover;
@@ -22,7 +20,7 @@ display: flexbox;
 flex-direction: column;
 }
 
-
+/* ----- Formato contenedor principal --------- */
 .contenido {
   flex: 1;
   background-color: rgba(255, 255, 255, 0.63);
@@ -35,6 +33,8 @@ flex-direction: column;
   margin-top: 15%;
   margin-bottom: 5%;
 }
+
+/* ----- Formatos titulos --------- */
 #titulo{
   font-family:'League Spartan', sans-serif;
   font-weight: 400;
