--- a/styles/datos_usuario.css
+++ b/styles/datos_usuario.css
@@ -1,6 +1,5 @@
 /* Fuentes */
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@600;900&family=Sanchez:ital@1&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Lustria&family=Tsukimi+Rounded:wght@500&display=swap" );
 root{
     --fuente-1: 'League Spartan', sans-serif;
     --fuente-2: 'Lustria', serif; 
@@ -44,4 +43,9 @@ label{
   font-family:'League Spartan', sans-serif;
   font-weight: 700;
   font-size: 1.3rem;
+}
+
+.card {
+
+  background-color: #e5beec;
 }
