--- a/styles/registrarse.css
+++ b/styles/registrarse.css
@@ -35,7 +35,7 @@ input{
     margin-top: 4rem;
 }
 /*Botones*/
-#submit-btn{
+#btn{
     padding: 15px 30px;
     border: .1rem;
     border-style: solid;
